<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.example.WorkActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task"
        android:textSize="15sp"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp" >

        <EditText
            android:id="@+id/number1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/number1"
            android:gravity="center"
            android:inputType="numberSigned|numberDecimal"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/number2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/number2"
            android:gravity="center"
            android:inputType="numberSigned|numberDecimal"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/number3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/number3"
            android:gravity="center"
            android:inputType="numberSigned|numberDecimal"
            tools:ignore="Autofill" />

    </LinearLayout>

    <Button
        android:id="@+id/work_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subtract"
        android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar" />

</LinearLayout>